--- a/app/styles/left.scss
+++ b/app/styles/left.scss
@@ -51,6 +51,8 @@
                   font-size: 4px;
                   vertical-align: middle;
                   margin-left: 1%;
+                  position: relative;
+                  z-index: -1;
                 }
               }
 
