--- a/app/styles/right.scss
+++ b/app/styles/right.scss
@@ -10,6 +10,7 @@
 
     .right {
       position: relative;
+      z-index: 10;
       margin: 0 0 0 33%;
       width: 63%;
       background-color: white;
